@@ -384,10 +384,17 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="0" colspan="2">
+       <item row="3" column="0" colspan="2">
         <widget class="QCheckBox" name="showRatingWidget">
          <property name="text">
           <string>Show track rating</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0" colspan="2">
+        <widget class="QCheckBox" name="showTechnicalInfo">
+         <property name="text">
+          <string>Show technical info</string>
          </property>
         </widget>
        </item>
